--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -1284,3 +1284,20 @@ label.error{
     border-bottom-width: thin;
     border-bottom-style: solid;
 }
+
+
+
+.esquinasRedondas {
+	border: 0px solid #ddd;
+    background-color:white;
+
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-khtml-border-radius: 10px;
+	border-radius: 10px;
+    padding: 5px 15px 5px 5px;
+    margin-top:0px;
+    margin-bottom:0px;
+    margin-left:5px;
+    margin-right:5px;
+}
