--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -1301,3 +1301,17 @@ label.error{
     margin-left:5px;
     margin-right:5px;
 }
+
+.selEval{
+    width:100px;
+    margin-bottom: 0px;
+}
+
+.letraVertical{
+    -webkit-transform: rotate(270deg);
+    -moz-transform: rotate(270deg);
+    -ms-transform: rotate(270deg);
+    -o-transform: rotate(270deg);
+    transform: rotate(270deg);
+    /*height: 100px;*/
+}
