--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -1303,7 +1303,8 @@ label.error{
 }
 
 .selEval{
-    width:100px;
+    /*width:100px;*/
+    width:100%;
     margin-bottom: 0px;
     height: 50px;
     /*height: 100%;*/
