Desc de Capitulos en ayuda

--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -1342,3 +1342,9 @@ table .vertical {
     vertical-align:text-top;
     padding: 5px;
 }
+
+.textoCapitulos{
+    text-align: justify;
+    width: 90%;
+    margin: auto;
+}
