--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -896,7 +896,7 @@ text-decoration:none;
 /* Content */
 
 .content ul{
-	list-style-type: none;
+	/*list-style-type: none;*/
 	margin-left: 0px;
 }
 
